# Raylib-Gaussian-Splat-Demo

./: .gitignore  CMakeLists.txt  GaussianMath.md  README.md
.zed/: tasks.json
shaders/: splat.fs  splat.vs
src/: main.cpp
